# BookWorm

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  backend.Dockerfile  pyproject.toml  pyproject.toml.bak  render.yaml  requirements.txt
backend/app/: config.py  db.py  dependencies.py  main.py  models.py  repository.py  service.py  types.py
data/: books.json
scripts/: seed_books.py
tests/: conftest.py  test_books.py
